0.103   2013-07-09
  * Documentation updates

0.100   2013-07-07
  * Initial CPAN release