@@ -1,3 +1,6 @@
+  * If we're going to write to a string, acquire the pointer with SvPV_force
+    so that perl copies the underlying string if it is a Copy-On-Write string
+
 0.103   2013-07-09
   * Documentation updates
 
